--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-map-gl": "^7.0.19",
     "react-scripts": "5.0.1",
     "resso": "^0.7.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
