--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,10 @@
-name: CI
+name: Yarn CI
+
 on: [push]
+
+env:
+  CI: false
+
 jobs:
   build:
     name: Test
@@ -9,12 +14,7 @@ jobs:
       - uses: borales/actions-yarn@v3.0.0
         with:
           cmd: install --frozen-lockfile # will run `yarn install` command
-          env:
-            CI: false
       - uses: borales/actions-yarn@v3.0.0
         with:
           cmd: build # will run `yarn build` command
-          env:
-            CI: false
-          
-        
+
