Added vote page

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "@mui/material": "^5.10.7",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
+    "@nivo/radar": "^0.80.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "d3": "^7.6.1",
     "deck.gl": "^8.8.11",
     "mapbox-gl": "^2.10.0",
     "rc-slider": "^10.0.1",
