--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
     "@nivo/radar": "^0.80.0",
+    "@nivo/treemap": "^0.80.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.19",
     "react-scripts": "5.0.1",
+    "react-toggle": "^4.1.3",
     "resso": "^0.7.0",
     "web-vitals": "^2.1.4",
     "worker-loader": "^3.0.8"
