--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.7",
+    "@mui/material": "^5.10.11",
+    "@mui/styled-engine-sc": "^5.10.6",
     "@nivo/bar": "^0.80.0",
     "@nivo/core": "^0.80.0",
     "@nivo/radar": "^0.80.0",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-toggle": "^4.1.3",
     "resso": "^0.7.0",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
     "worker-loader": "^3.0.8"
   },
