--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "community_dao",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@deck.gl/core": "^8.8.14",
     "@deck.gl/extensions": "^8.8.14",
@@ -6,6 +9,7 @@
     "@deck.gl/react": "^8.8.14",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@fingerprintjs/fingerprintjs": "^3.3.6",
     "@mui/material": "^5.10.11",
     "@mui/styled-engine-sc": "^5.10.6",
     "@nivo/bar": "^0.80.0",
@@ -16,11 +20,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@turf/turf": "^6.5.0",
+    "crypto-js": "^4.1.1",
     "d3": "^7.6.1",
     "deck.gl": "^8.8.11",
+    "html2canvas": "^1.4.1",
     "mapbox-gl": "^2.10.0",
     "rc-slider": "^10.0.1",
     "react": "^18.2.0",
+    "react-app-protect": "^1.0.8",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.19",
     "react-scripts": "5.0.1",
